# ai-chatroom-theater

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/characters/: apple-fan.yaml  linux-evangelist.yaml  normie.yaml  pc-master-race.yaml
examples/scenes/: laptop-debate.yaml  startup-pitch.yaml  zombie-survival.yaml
src/ai_theater/: __init__.py  cli.py  server.py
src/ai_theater/characters/: manager.py
src/ai_theater/conversation/: engine.py
src/ai_theater/core/: models.py  protocols.py
src/ai_theater/display/: rich_tui.py
src/ai_theater/memory/: in_memory.py
src/ai_theater/providers/: ollama.py
tests/: test_mvp.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: config.ts  main.ts  types.ts
web/src/network/: WebSocketClient.ts
web/src/scenes/: TheaterScene.ts  TitleScene.ts
web/src/ui/: CharacterBustUps.ts  CharacterSpots.ts  DialogBox.ts
